[FIX] web_enterprise,*: reintroduce mobile control panel
Before this commit, the new control panel's style was completely
broken in mobile. Now, the control panel is patched to add some logic
and change the template when the screen size is small.

closes odoo-dev/enterprise#207

Related: odoo-dev/odoo#1021
Part-of: odoo/enterprise#19469

--- a/web_enterprise/static/src/legacy/scss/control_panel_layout.scss
+++ b/web_enterprise/static/src/legacy/scss/control_panel_layout.scss
@@ -33,6 +33,7 @@
 @include media-breakpoint-down(sm) {
     .o_control_panel {
         padding-right: 0;
+        width: 100%;
 
         .o_cp_action_menus {
             .o_dropdown_title {
