--- a/web_enterprise/static/src/legacy/scss/control_panel_mobile.scss
+++ b/web_enterprise/static/src/legacy/scss/control_panel_mobile.scss
@@ -57,6 +57,9 @@
             // Here we use !important because of popper js adding custom style
             // to element so to override it use !important
             position: relative !important;
+            top: 0 !important;
+            left: 0 !important;
+            width: 100%;
         }
     }
 }
